stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_infer__infer_secret_propagation.snap
---
source: crates/stepflow-cli/tests/commands/test_infer.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - infer
    - "--flow=stepflow-rs/crates/stepflow-cli/tests/commands/secret_propagation.yaml"
    - "--show-step-inputs"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
✅ Validation passed with no errors
name: Secret Propagation Test
description: Test that is_secret annotation propagates through variable references
schemas:
  type: object
  properties:
    output:
      type: object
      properties:
        messages:
          type: array
          items:
            $ref: '#/$defs/ChatMessage'
      required:
      - messages
    variables:
      type: object
      properties:
        api_key:
          type: string
          is_secret: true
          description: A secret API key
        temperature:
          type: number
          description: A non-secret temperature value
      required:
      - api_key
    steps:
      type: object
      properties:
        create_message:
          $schema: https://json-schema.org/draft/2020-12/schema
          title: CreateMessagesOutput
          type: object
          properties:
            messages:
              type: array
              items:
                $ref: '#/$defs/ChatMessage'
          required:
          - messages
steps:
- id: create_message
  component: /builtin/create_messages
  input:
    user_prompt: Using API key
    metadata:
      api_key:
        $variable: $.api_key
      temperature:
        $variable: $.temperature
output:
  messages:
    $step: create_message
    path: $.messages


----- stderr -----

📥 Synthesized step input types:
  create_message: { user_prompt: string, metadata: { api_key: string [secret], temperature: number } }

📋 Component expected input types:
  create_message: { system_instructions: any, user_prompt: string }

📊 Inferred step output types:
  create_message: { messages: ChatMessage[] }
